tests/query_errors/subquery_select_bad_stream/error.txt
Error: 
    5 |   select event from in into out;
      |                     ^^ Stream used in `from` or `into` is not defined: in
